--- a/_config.yml
+++ b/_config.yml
@@ -78,3 +78,13 @@ deploy:
   type: git
   repo: git@github.com:wenslo/wenslo.github.io.git
   branch: master
+
+toc:
+  maxdepth: 3
+  class: toc
+  slugify: transliteration
+  decodeEntities: false
+  anchor:
+    position: after
+    symbol: '#'
+    style: header-anchor
