--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
+    "hexo-toc": "^1.1.0",
     "hexo-wordcount": "^6.0.1"
   }
 }
