--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,24 @@
-# Site
 title: 温海林的博客
 subtitle: 技术，工作，生活，随笔
-description: Fake it, make it!
-keywords:
+description: 'Fake it, make it!'
+keywords: null
 author: 温海林
 language: zh-CN
-
-# URL
-## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: 'https://wenslo.github.io'
 root: /
-permalink: :year/:month/:day/:title/
-permalink_defaults:
-
-# Directory
+permalink: ':year/:month/:day/:title/'
+permalink_defaults: null
 source_dir: source
 public_dir: public
 tag_dir: tags
 archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
-i18n_dir: :lang
-skip_render:
-
-# Writing
-new_post_name: :title.md # File name of new posts
+i18n_dir: ':lang'
+skip_render: null
+new_post_name: ':title.md'
 default_layout: post
-titlecase: false # Transform title into titlecase
-external_link: true # Open external links in new tab
+titlecase: false
 filename_case: 0
 render_drafts: false
 post_asset_folder: false
@@ -37,42 +28,20 @@ highlight:
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace:
-  
-# Home page setting
-# path: Root path for your blogs index page. (default = '')
-# per_page: Posts displayed per page. (0 = disable pagination)
-# order_by: Posts order. (Order by date descending by default)
+  tab_replace: null
 index_generator:
   path: ''
   per_page: 10
-  order_by: -date
-  
-# Category & Tag
+  order_by: '-date'
 default_category: uncategorized
-category_map:
-tag_map:
-
-# Date / Time format
-## Hexo uses Moment.js to parse and display date
-## You can customize the date format as defined in
-## http://momentjs.com/docs/#/displaying/format/
+category_map: null
+tag_map: null
 date_format: YYYY-MM-DD
-time_format: HH:mm:ss
-
-# Pagination
-## Set per_page to 0 to disable pagination
+time_format: 'HH:mm:ss'
 per_page: 10
 pagination_dir: page
-
-# Extensions
-## Plugins: https://hexo.io/plugins/
-## Themes: https://hexo.io/themes/
 theme: next-reloaded
-
-# Deployment
-## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:wenslo/wenslo.github.io.git
+  repo: 'git@github.com:wenslo/wenslo.github.io.git'
   branch: master
