--- a/package.json
+++ b/package.json
@@ -3,22 +3,27 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.9.0"
+    "version": "5.2.0"
   },
   "dependencies": {
-    "hexo": "^3.9.0",
+    "bulma-stylus": "^0.8.0",
+    "hexo": "^5.2.0",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-searchdb": "^1.1.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-log": "^2.0.0",
+    "hexo-pagination": "^1.0.0",
     "hexo-renderer-ejs": "^0.3.1",
+    "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-mathjax": "^0.6.0",
-    "hexo-renderer-stylus": "^0.3.3",
+    "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^0.3.3",
     "hexo-toc": "^1.1.0",
+    "hexo-util": "^2.4.0",
     "hexo-wordcount": "^6.0.1"
   }
 }
