--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bulma-stylus": "^0.8.0",
+    "cheerio": "^1.0.0-rc.5",
     "hexo": "^5.2.0",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.5",
